@@ -12,6 +12,8 @@ config.plugins.push(new webpack.DefinePlugin({
 
 // See https://github.com/facebookincubator/create-react-app/blob/master/packages/react-scripts/config/webpack.config.prod.js.
 config.plugins.push(new webpack.optimize.UglifyJsPlugin({
+  sourceMap: true,
+
   compress: {
     screw_ie8: true,
     warnings: false
